--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="https://cdn.bootcdn.net/ajax/libs/systemjs/6.10.1/system.min.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
